--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runInBand"
   },
   "author": "eu",
   "license": "ISC",
   "keywords": [],
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "esm": "^3.2.25",
     "express": "5.1.0",
+    "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.0",
     "pg": "^8.14.1",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/css": "^0.6.0",
@@ -27,6 +31,9 @@
     "@eslint/markdown": "^6.3.0",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4",
+    "cross-env": "^7.0.3"
   }
 }
